style.css
/* ... */
.form-button {
    margin-top: 10px;
}

.bttn-onw {
  font-size: 1rem;
    padding: 10px;
    width: 500px;
    cursor: pointer;
    border-radius: 30px;
    font-weight: bold;
    background-color: black;
    border: none;
    color: white;
    transition: 0.5s ease;
} 

.list-items {
  display: flex;
  list-style: none;
  gap: 2.5rem;
  cursor: pointer;
  font-size: 1.3rem;
  transition: 1s ease;
}

.list-items li .nav-item {
  color: white;
  text-decoration: none;
 
}

.list-items li .nav-item:hover {
   text-decoration: underline;
   text-underline-offset: 0.30rem;
}

.dropdownparent {
  position: relative;
  display: inline-block;
}

.dropdown-list {
  display: none;
  position: absolute;
  background-image: linear-gradient(to bottom right, #305170, #6DFC6B);
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

.dropdown {
   color: white;
  padding: 10px;
  text-decoration: none;
  display: block;
  font-size: 1rem;
}

.dropdown:hover {
  color: rgb(113, 113, 161);
}

.dropdown-list li {
   list-style: none;
}

.show {display:block;}

.hamburger-menu {
  display: none;
}

.bar {
  display: block;
  width: 24px;
  height: 3px;
  margin: 5px auto;
  background-color: white;
}

.Caurasel {
  position: relative;
  width: 100%;
  height: 90vh;
  overflow: hidden;
}

.Caurasel::after {
  content: "";
  display: block;
  padding-top: 18%;
}

.slide {
  position: absolute;
  inset: 0;
  opacity: 0;
  transition: 200ms opacity ease-in-out;
  transition-delay: 200ms;
}

.slide[data-active] {
  opacity: 1;
  transition-delay: 0ms;
}

.slide > .slide-img {
  display: block;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center;
  object-fit: cover;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}

.bttn {
  position: absolute;
  font-size: 2rem;
  top: 35%;
  z-index: 2;
  cursor: pointer;
  opacity: 0.7;
}

.bttn.prev {
  left: 1rem;
}

.bttn.next {
  right: 1rem;
}

.Gorkha {
  width: 350px;
  height: 450px;
  border-radius: 10px;
}

.dream {
  margin-top: 2rem;
  height: 100vh;
  display: flex;
  gap: 3rem;
  justify-content: center;
  align-items: center;
}

.Gorkha-Content {
  width: 600px;
}

.gor-para {
  margin-top: 1rem;
}

.gor-heading {
  color: red;
}

.gor-sub-head {
  font-size: 2.5rem;
}

.aricles-heading-para {
  font-size: 2.7rem;
  margin-bottom: 1.5rem;
}

.head-articles {
  height: 80vh;
  background-color: rgb(228, 224, 220);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.Articles {
  background-color: white;
  width: 900px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding: 90px;
  border-radius: 15px;
}

.Articles-para {
  text-align: center;
  margin-bottom: 3rem;
}

.artical-button {
  font-size: 1.3rem;
  padding: 13px;
  background-color: red;
  cursor: pointer;
  color: white;
  border-radius: 40px;
  border: none;
  transition: 0.5s ease;
}

.artical-button:hover {
  background-color: rgb(143, 10, 10);
} 

.qr-code-image {
  width: 400px;
  height: 400px;
}

.qr-flex {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 80vh;
}

.qr-below {
  width: 600px;
  margin-top: 1.5rem;
}

.parent-director {
  padding-top: 3rem;
  height: 60vh;
  background-color: rgb(228, 224, 220);
}

.Directory {
  font-size: 2.3rem;
  text-align: center;
  margin-bottom: 2rem;
}

.Aligning {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  text-align: center;
}

.President-Info {
  height: 90vh;
  background-color: #233857;
  display: flex;
  gap: 2rem;
  justify-content: center;
  color: white;
  align-items: center;
}

.President-Image{
  width: 350px;
  height: 480px;
  border-radius: 15px;
}

.President-heading {
  margin-bottom: 1rem;
}

.President-para {
  width: 600px;
  margin-bottom: 2rem;
  letter-spacing: 2px;
}

.President-name {
  margin-bottom: 1rem;
}

.General-Security {
  background-color: white;
  height: 90vh;
  display: flex;
  gap: 2rem;
  justify-content: center;
  align-items: center;
}

.General-Security-image {
  width: 400px;
  height: 400px;
  border-radius: 15px;
}

.pres {
  background-color: white;
  width: 400px;
  padding: 40px;
  border-radius: 15px;
  transition: 1s ease;
}

.pres:hover {
  background-color: black;
  color: white;
}

.pres .pres-para:hover {
  color: white;
}

.Checking {
  color: red;
}

.pres-para {
  margin-bottom: 0.50rem;
}

.some-thing {
  margin-bottom: 1rem;
}

.Handle-everything {
  height: 35vh;
  display: flex;
  justify-content: center;
  background-image: linear-gradient(to bottom right, #305170, #6DFC6B);
  color: white;
  align-items: center;
  gap: 4rem;
}

.items {
  color: white;
  text-decoration: none;
}

.links {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.link-items {
  list-style: none;
  cursor: pointer;
  display: flex;
  flex-direction: column;
  gap: 0.45rem;
}

.link-items li a:hover {
  color: rgb(113, 113, 161);
}

.members {
  text-align: center;
  background-color: rgb(69, 143, 69);
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  padding-top: 4rem;
  padding-bottom: 4rem;
 color: white;
}

.member-images {
  width: 200px;
  height: 200px;
  margin: auto;
  border-radius: 100px;
  padding-top: 1rem;
}

.member-details{
  width: 350px;
  height: 330px;
  background-color: rgb(228, 224, 220);
  color: black;
  margin-top: 3rem;
  border-radius: 15px;
}

.sub-member-details {
   display: flex;
   justify-content: center;
   flex-direction: column;
   text-align: center;
   gap: 10px;
   color: black;
}

.other-member-details {
    width: 350px;
  height: 330px;
  background-color: rgb(228, 224, 220);
  border-radius: 15px;
}
/* ... */

